# GPU_processing

./: Cargo.toml  build.rs
benches/: my_benchmark.rs
src/: lib.rs
src/core/: core.rs  error.rs  gain_correction_resources.rs  mod.rs  offset_correction.rs
src/core/corrections/: dark_correction.rs  defect_correction.rs  defect_correction_texture.rs  gain_correction.rs  gain_correction_resources.rs  mod.rs  offset_correction.rs
src/core/shaders/: defect_correction.wgsl  defect_correction_kernel.wgsl  gain_correction.wgsl  min_max.wgsl  normalise.wgsl  offset_correction.wgsl  offset_correction_16.wgsl
src/ffi/: gpu_handle.rs  mod.rs  power_preference.rs
testprogram/headers/: gpu.h  mycrate.h
