[package]
name = "bind_Test"
version = "0.1.0"
edition = "2021"

[lib]
name = "gpu_processing"
crate-type = ["cdylib"] 

[build-dependencies]
cbindgen = "0.18.0"

[dependencies]
bytemuck = "1.14.0"
env_logger = "0.10.1"
flume = "0.11.0"
futures = "0.3.29"
pollster = "0.3.0"
profiling = "1.0.11"
thiserror = "1.0.50"
vulkano = { git = "https://github.com/vulkano-rs/vulkano" }
vulkano-shaders = "0.34.0"
wgpu = "0.18.0"
wgpu-profiler = { git = "https://github.com/Wumpf/wgpu-profiler.git", version = "0.15.0" }
