[package]
name = "gpu_processing"
version = "0.1.0"
edition = "2021"

[lib]
name = "gpu_processing"
crate-type = ["cdylib", "lib"] 

[build-dependencies]
cbindgen = "0.18.0"

[dev-dependencies]


[[bench]]
name = "my_benchmark"
harness = false

[dependencies]
bytemuck = "1.14.0"
env_logger = "0.10.1"
futures = "0.3.29"
log = "0.4.20"
profiling = "1.0.11"
thiserror = "1.0.50"
vulkano = { git = "https://github.com/vulkano-rs/vulkano" }
vulkano-shaders = "0.34.0"
